@@ -1,3 +1,6 @@
+=== 2016-12-12
+* Enhancements
+  * Added #hidden_field_elements to ElementLocators
 === 2016-11-15
 * Enhancements
   * Added #button_elements to ElementLocators
